--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ repositories {
 
 
 dependencies {
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '1.5.7.RELEASE'
 	compileOnly 'org.projectlombok:lombok:1.16.18'
 	compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.1')
 	compile('org.springframework.boot:spring-boot-starter-web')
