--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/training
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+mybatis.configuration.mapUnderscoreToCamelCase=true
+# マッピング不能なフィールドがあったときの処理。 NONE, WARNING, FAILING
+mybatis.configuration.autoMappingUnknownColumnBehavior=WARNING
